--- a/package.json
+++ b/package.json
@@ -1,26 +1,24 @@
 {
-  "name": "science-kit"
-, "version": "0.0.1"
-, "private": true
-, "engines": {
-    "node": "5.0.x"
-  }
-, "scripts": {
-  }
-, "dependencies": {
-  }
-, "devDependencies": {
-    "babelify": "~7.2.0"
-  , "babel-preset-es2015": "~6.1.18"
-  , "babel-preset-react": "~6.1.18"
-  , "browser-sync": "~2.10.0"
-  , "browserify": "~12.0.1"
-  , "gulp": "~3.9.0"
-  , "gulp-jade": "~1.1.0"
-  , "gulp-notify": "~2.2.0"
-  , "gulp-sass": "~2.1.0"
-  , "jquery": "~2.1.4"
-  , "vinyl-source-stream": "~1.1.0"
-  , "watchify": "~3.6.1"
+  "name": "science-kit",
+  "version": "0.0.1",
+  "private": true,
+  "engines": {
+    "node": ">=8.0.0"
+  },
+  "scripts": {},
+  "dependencies": {},
+  "devDependencies": {
+    "babel-core": "~6.26.0",
+    "babel-preset-env": "~1.6.1",
+    "babelify": "~8.0.0",
+    "browser-sync": "~2.23.6",
+    "browserify": "~16.1.0",
+    "gulp": "~3.9.1",
+    "gulp-jade": "~1.1.0",
+    "gulp-notify": "~3.2.0",
+    "gulp-sass": "~3.1.0",
+    "jquery": "~3.3.1",
+    "vinyl-source-stream": "~2.0.0",
+    "watchify": "~3.10.0"
   }
 }
