--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "babelify": "~8.0.0",
     "browser-sync": "~2.23.6",
     "browserify": "~16.1.0",
+    "cash-dom": "~1.3.7",
     "gulp": "~3.9.1",
     "gulp-jade": "~1.1.0",
     "gulp-notify": "~3.2.0",
     "gulp-sass": "~3.1.0",
-    "jquery": "~3.3.1",
     "vinyl-source-stream": "~2.0.0",
     "watchify": "~3.10.0"
   }
