--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "browserify": "~16.1.0",
     "cash-dom": "~1.3.7",
     "gulp": "~3.9.1",
-    "gulp-jade": "~1.1.0",
+    "gulp-pug": "~3.3.0",
     "gulp-notify": "~3.2.0",
     "gulp-sass": "~3.1.0",
     "vinyl-source-stream": "~2.0.0",
