--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
-  "name": "science-kit",
+  "name": "es6-space-invaders",
   "version": "0.0.1",
   "private": true,
   "engines": {
     "node": ">=8.0.0"
   },
   "scripts": {},
-  "dependencies": {},
+  "dependencies": {
+    "cash-dom": "^1.3.7"
+  },
   "devDependencies": {
-    "babel-core": "~6.26.0",
-    "babel-preset-env": "~1.6.1",
-    "babelify": "~8.0.0",
-    "browser-sync": "~2.23.6",
-    "browserify": "~16.1.0",
-    "cash-dom": "~1.3.7",
-    "gulp": "~3.9.1",
-    "gulp-pug": "~3.3.0",
-    "gulp-notify": "~3.2.0",
-    "gulp-sass": "~3.1.0",
-    "vinyl-source-stream": "~2.0.0",
-    "watchify": "~3.10.0"
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "babelify": "^8.0.0",
+    "browser-sync": "^2.24.4",
+    "browserify": "^16.2.2",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.12.0",
+    "gulp": "^3.9.1",
+    "gulp-notify": "^3.2.0",
+    "gulp-pug": "^4.0.1",
+    "gulp-sass": "^4.0.1",
+    "vinyl-source-stream": "^2.0.0",
+    "watchify": "^3.11.0"
   }
 }
